--- a/hasanov_parvizjon_task_5.ipynb
+++ b/hasanov_parvizjon_task_5.ipynb
@@ -34,7 +34,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-31T18:02:50.453754Z",
+     "start_time": "2024-10-31T18:02:50.339088Z"
+    },
     "executionInfo": {
      "elapsed": 1108,
      "status": "ok",
@@ -45,55 +50,8 @@
      },
      "user_tz": -300
     },
-    "id": "kldguVjkJ7Qk",
-    "ExecuteTime": {
-     "end_time": "2024-10-31T18:02:50.453754Z",
-     "start_time": "2024-10-31T18:02:50.339088Z"
-    }
+    "id": "kldguVjkJ7Qk"
    },
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "data = pd.read_csv(\n",
-    "    \"/Users/parvizjon/python-practicу-module-pandas-read-and-group-data/python-practice-module-pandas-read-and-groata/games.csv\")\n",
-    "print(\"Первые 5 строк данных:\\n\", data.head())\n",
-    "print(\"Статистика данных:\\n\", data.describe())\n",
-    "print(\"Информация о данных:\\n\", data.info())\n",
-    "\n",
-    "data.columns = data.columns.str.strip().str.lower()\n",
-    "print(\"Названия колонок:\", data.columns)\n",
-    "\n",
-    "data['total_sales'] = (\n",
-    "        data['na_sales'] +\n",
-    "        data['eu_sales'] +\n",
-    "        data['jp_sales'] +\n",
-    "        data['other_sales']\n",
-    ")\n",
-    "\n",
-    "platform_sales = data.pivot_table(\n",
-    "    index='platform',\n",
-    "    values='total_sales',\n",
-    "    aggfunc=['sum', 'count'],\n",
-    "    margins=True\n",
-    ")\n",
-    "platform_sales.columns = ['total_sales', 'sales_count']\n",
-    "genre_stats = data.pivot_table(\n",
-    "    index='genre',\n",
-    "    values='total_sales',\n",
-    "    aggfunc=['sum', 'max', 'min'],\n",
-    "    margins=True\n",
-    ")\n",
-    "genre_stats.columns = ['total_sales', 'max_sales', 'min_sales']\n",
-    "top_5_platforms = platform_sales.nlargest(5, 'total_sales')\n",
-    "top_5_genres = genre_stats.nlargest(5, 'total_sales')\n",
-    "\n",
-    "with pd.ExcelWriter(\n",
-    "        \"/Users/parvizjon/python-practicу-module-pandas-read-and-group-data/python-practice-module-pandas-read-and-groata/game_sales_analysis_extended.xlsx\") as writer:\n",
-    "    platform_sales.to_excel(writer, sheet_name='Platform Sales')\n",
-    "    genre_stats.to_excel(writer, sheet_name='Genre Stats')\n",
-    "    top_5_platforms.to_excel(writer, sheet_name='Top 5 Platforms')\n",
-    "    top_5_genres.to_excel(writer, sheet_name='Top 5 Genres')\n"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -159,7 +117,64 @@
      ]
     }
    ],
-   "execution_count": 24
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "try:\n",
+    "    data = pd.read_csv(\n",
+    "    \"/Users/parvizjon/python-practicу-module-pandas-read-and-group-data/python-practice-module-pandas-read-and-groata/games.csv\")\n",
+    "except:\n",
+    "    data = pd.read_csv(r\"C:\\Users\\EgamovA\\Downloads\\games.csv\")\n",
+    "\n",
+    "print(\"Первые 5 строк данных:\\n\", data.head())\n",
+    "print(\"Статистика данных:\\n\", data.describe())\n",
+    "print(\"Информация о данных:\\n\", data.info())\n",
+    "\n",
+    "data.columns = data.columns.str.strip().str.lower()\n",
+    "print(\"Названия колонок:\", data.columns)\n",
+    "\n",
+    "data['total_sales'] = (\n",
+    "        data['na_sales'] +\n",
+    "        data['eu_sales'] +\n",
+    "        data['jp_sales'] +\n",
+    "        data['other_sales']\n",
+    ")\n",
+    "\n",
+    "platform_sales = data.pivot_table(\n",
+    "    index='platform',\n",
+    "    values='total_sales',\n",
+    "    aggfunc=['sum', 'count'],\n",
+    "    margins=True\n",
+    ")\n",
+    "platform_sales.columns = ['total_sales', 'sales_count']\n",
+    "genre_stats = data.pivot_table(\n",
+    "    index='genre',\n",
+    "    values='total_sales',\n",
+    "    aggfunc=['sum', 'max', 'min'],\n",
+    "    margins=True\n",
+    ")\n",
+    "genre_stats.columns = ['total_sales', 'max_sales', 'min_sales']\n",
+    "top_5_platforms = platform_sales.nlargest(5, 'total_sales')\n",
+    "top_5_genres = genre_stats.nlargest(5, 'total_sales')\n",
+    "\n",
+    "# with pd.ExcelWriter(\n",
+    "#         \"/Users/parvizjon/python-practicу-module-pandas-read-and-group-data/python-practice-module-pandas-read-and-groata/game_sales_analysis_extended.xlsx\") as writer:\n",
+    "#     platform_sales.to_excel(writer, sheet_name='Platform Sales')\n",
+    "#     genre_stats.to_excel(writer, sheet_name='Genre Stats')\n",
+    "#     top_5_platforms.to_excel(writer, sheet_name='Top 5 Platforms')\n",
+    "#     top_5_genres.to_excel(writer, sheet_name='Top 5 Genres')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<h2> Комментарий ревьюера <a class=\"tocSkip\"> </h2>\n",
+    "\n",
+    "<b>Все отлично!👍</b> Достаточно было использовать пандас для выгрузки данных в экзель формат, без применения ExcelWriter. Поскольку никакой обработки не используется с его применением. \n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,7 +201,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-31T17:57:18.354633Z",
+     "start_time": "2024-10-31T17:57:18.280192Z"
+    },
     "executionInfo": {
      "elapsed": 4,
      "status": "ok",
@@ -197,61 +217,8 @@
      },
      "user_tz": -300
     },
-    "id": "39M1_oR8J7Qu",
-    "ExecuteTime": {
-     "end_time": "2024-10-31T17:57:18.354633Z",
-     "start_time": "2024-10-31T17:57:18.280192Z"
-    }
+    "id": "39M1_oR8J7Qu"
    },
-   "source": [
-    "# Решение \n",
-    "import pandas as pd\n",
-    "\n",
-    "data = pd.read_csv(\n",
-    "    \"/Users/parvizjon/python-practicу-module-pandas-read-and-group-data/python-practice-module-pandas-read-and-groata/games.csv\")\n",
-    "\n",
-    "data.columns = data.columns.str.strip().str.lower()\n",
-    "\n",
-    "platform_sales = data.groupby('platform').agg(\n",
-    "    total_sales=('na_sales', 'sum'),\n",
-    "    eu_sales=('eu_sales', 'sum'),\n",
-    "    jp_sales=('jp_sales', 'sum'),\n",
-    "    other_sales=('other_sales', 'sum'),\n",
-    "    count_sales=('na_sales', 'count')\n",
-    ")\n",
-    "\n",
-    "platform_sales['total_sales'] = platform_sales[['total_sales', 'eu_sales', 'jp_sales', 'other_sales']].sum(axis=1)\n",
-    "platform_sales = platform_sales[['total_sales', 'count_sales']]\n",
-    "\n",
-    "print(\"Сумма и количество продаж по каждой платформе:\\n\", platform_sales)\n",
-    "\n",
-    "genre_sales_stats = data.groupby('genre').agg(\n",
-    "    total_sales=('na_sales', 'sum'),\n",
-    "    eu_sales=('eu_sales', 'sum'),\n",
-    "    jp_sales=('jp_sales', 'sum'),\n",
-    "    other_sales=('other_sales', 'sum'),\n",
-    "    median_sales=('na_sales', 'median'),\n",
-    "    mean_sales=('na_sales', 'mean')\n",
-    ")\n",
-    "\n",
-    "genre_sales_stats['total_sales'] = genre_sales_stats[['total_sales', 'eu_sales', 'jp_sales', 'other_sales']].sum(axis=1)\n",
-    "genre_sales_stats = genre_sales_stats[['total_sales', 'median_sales', 'mean_sales']]\n",
-    "\n",
-    "print(\"Сумма, медиана и среднее по жанрам:\\n\", genre_sales_stats)\n",
-    "\n",
-    "bottom_5_platforms = platform_sales.nsmallest(5, 'total_sales')\n",
-    "print(\"Топ-5 наименее популярных платформ:\\n\", bottom_5_platforms)\n",
-    "\n",
-    "bottom_5_genres = genre_sales_stats.nsmallest(5, 'total_sales')\n",
-    "print(\"Топ-5 наименее привлекательных жанров:\\n\", bottom_5_genres)\n",
-    "\n",
-    "with pd.ExcelWriter(\n",
-    "        \"/Users/parvizjon/python-practicу-module-pandas-read-and-group-data/python-practice-module-pandas-read-and-groata/game_sales_analysis_extended.xlsx\") as writer:\n",
-    "    platform_sales.to_excel(writer, sheet_name=\"Platform Sales\")\n",
-    "    genre_sales_stats.to_excel(writer, sheet_name=\"Genre Sales Stats\")\n",
-    "    bottom_5_platforms.to_excel(writer, sheet_name=\"Bottom 5 Platforms\")\n",
-    "    bottom_5_genres.to_excel(writer, sheet_name=\"Bottom 5 Genres\")\n"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -325,7 +292,66 @@
      ]
     }
    ],
-   "execution_count": 19
+   "source": [
+    "# Решение \n",
+    "import pandas as pd\n",
+    "\n",
+    "# data = pd.read_csv(\n",
+    "#     \"/Users/parvizjon/python-practicу-module-pandas-read-and-group-data/python-practice-module-pandas-read-and-groata/games.csv\")\n",
+    "\n",
+    "data.columns = data.columns.str.strip().str.lower()\n",
+    "\n",
+    "platform_sales = data.groupby('platform').agg(\n",
+    "    total_sales=('na_sales', 'sum'),\n",
+    "    eu_sales=('eu_sales', 'sum'),\n",
+    "    jp_sales=('jp_sales', 'sum'),\n",
+    "    other_sales=('other_sales', 'sum'),\n",
+    "    count_sales=('na_sales', 'count')\n",
+    ")\n",
+    "\n",
+    "platform_sales['total_sales'] = platform_sales[['total_sales', 'eu_sales', 'jp_sales', 'other_sales']].sum(axis=1)\n",
+    "platform_sales = platform_sales[['total_sales', 'count_sales']]\n",
+    "\n",
+    "print(\"Сумма и количество продаж по каждой платформе:\\n\", platform_sales)\n",
+    "\n",
+    "genre_sales_stats = data.groupby('genre').agg(\n",
+    "    total_sales=('na_sales', 'sum'),\n",
+    "    eu_sales=('eu_sales', 'sum'),\n",
+    "    jp_sales=('jp_sales', 'sum'),\n",
+    "    other_sales=('other_sales', 'sum'),\n",
+    "    median_sales=('na_sales', 'median'),\n",
+    "    mean_sales=('na_sales', 'mean')\n",
+    ")\n",
+    "\n",
+    "genre_sales_stats['total_sales'] = genre_sales_stats[['total_sales', 'eu_sales', 'jp_sales', 'other_sales']].sum(axis=1)\n",
+    "genre_sales_stats = genre_sales_stats[['total_sales', 'median_sales', 'mean_sales']]\n",
+    "\n",
+    "print(\"Сумма, медиана и среднее по жанрам:\\n\", genre_sales_stats)\n",
+    "\n",
+    "bottom_5_platforms = platform_sales.nsmallest(5, 'total_sales')\n",
+    "print(\"Топ-5 наименее популярных платформ:\\n\", bottom_5_platforms)\n",
+    "\n",
+    "bottom_5_genres = genre_sales_stats.nsmallest(5, 'total_sales')\n",
+    "print(\"Топ-5 наименее привлекательных жанров:\\n\", bottom_5_genres)\n",
+    "\n",
+    "# with pd.ExcelWriter(\n",
+    "#         \"/Users/parvizjon/python-practicу-module-pandas-read-and-group-data/python-practice-module-pandas-read-and-groata/game_sales_analysis_extended.xlsx\") as writer:\n",
+    "#     platform_sales.to_excel(writer, sheet_name=\"Platform Sales\")\n",
+    "#     genre_sales_stats.to_excel(writer, sheet_name=\"Genre Sales Stats\")\n",
+    "#     bottom_5_platforms.to_excel(writer, sheet_name=\"Bottom 5 Platforms\")\n",
+    "#     bottom_5_genres.to_excel(writer, sheet_name=\"Bottom 5 Genres\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<h2> Комментарий ревьюера <a class=\"tocSkip\"> </h2>\n",
+    "\n",
+    "<b>Все отлично!👍</b> Рекомендую разграничивать выполнение задач в отдельных ячейках.\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -357,52 +383,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-31T17:46:07.958918Z",
      "start_time": "2024-10-31T17:46:07.885151Z"
     }
    },
-   "source": [
-    "# Решение\n",
-    "import pandas as pd\n",
-    "\n",
-    "file_path = \"/Users/parvizjon/python-practicу-module-pandas-read-and-group-data/python-practice-module-pandas-read-and-groata/cw_task.xlsx\"\n",
-    "data = pd.read_excel(file_path)\n",
-    "\n",
-    "print(data.info())\n",
-    "print(data.head())\n",
-    "\n",
-    "\n",
-    "def classify_amount(amount):\n",
-    "    if 50 <= amount <= 150:\n",
-    "        return 'Low'\n",
-    "    elif 151 <= amount <= 300:\n",
-    "        return 'Medium'\n",
-    "    elif amount > 300:\n",
-    "        return 'High'\n",
-    "    else:\n",
-    "        return 'Unknown'\n",
-    "\n",
-    "\n",
-    "data['amount_category'] = data['amount'].apply(lambda x: classify_amount(x))\n",
-    "\n",
-    "grouped_data = data.groupby(['amount_category', 'deb_type']).agg(\n",
-    "    total_amount=('amount', 'sum')\n",
-    ").reset_index()\n",
-    "\n",
-    "print(\"Группировка по amount_category и deb_type:\\n\", grouped_data)\n",
-    "\n",
-    "pivot_table = pd.pivot_table(\n",
-    "    data,\n",
-    "    values='amount',\n",
-    "    index='deb_type',\n",
-    "    columns='amount_category',\n",
-    "    aggfunc='sum'\n",
-    ").fillna(0).sort_values(by='High', ascending=False)\n",
-    "\n",
-    "print(\"Сводная таблица:\\n\", pivot_table)\n"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -450,7 +437,57 @@
      ]
     }
    ],
-   "execution_count": 10
+   "source": [
+    "# Решение\n",
+    "import pandas as pd\n",
+    "\n",
+    "file_path = \"/Users/parvizjon/python-practicу-module-pandas-read-and-group-data/python-practice-module-pandas-read-and-groata/cw_task.xlsx\"\n",
+    "data = pd.read_excel(file_path)\n",
+    "\n",
+    "print(data.info())\n",
+    "print(data.head())\n",
+    "\n",
+    "\n",
+    "def classify_amount(amount):\n",
+    "    if 50 <= amount <= 150:\n",
+    "        return 'Low'\n",
+    "    elif 151 <= amount <= 300:\n",
+    "        return 'Medium'\n",
+    "    elif amount > 300:\n",
+    "        return 'High'\n",
+    "    else:\n",
+    "        return 'Unknown'\n",
+    "\n",
+    "\n",
+    "data['amount_category'] = data['amount'].apply(lambda x: classify_amount(x))\n",
+    "\n",
+    "grouped_data = data.groupby(['amount_category', 'deb_type']).agg(\n",
+    "    total_amount=('amount', 'sum')\n",
+    ").reset_index()\n",
+    "\n",
+    "print(\"Группировка по amount_category и deb_type:\\n\", grouped_data)\n",
+    "\n",
+    "pivot_table = pd.pivot_table(\n",
+    "    data,\n",
+    "    values='amount',\n",
+    "    index='deb_type',\n",
+    "    columns='amount_category',\n",
+    "    aggfunc='sum'\n",
+    ").fillna(0).sort_values(by='High', ascending=False)\n",
+    "\n",
+    "print(\"Сводная таблица:\\n\", pivot_table)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<h2> Комментарий ревьюера <a class=\"tocSkip\"> </h2>\n",
+    "\n",
+    "<b>Все отлично!👍</b> Неудобный вывод, который не позволяет мне рассмотреть нормально выведенную информацию, разграничивайте свои решения в бдущем.\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
@@ -463,7 +500,7 @@
    ]
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -477,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
